# SortVis

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md
src/sortvis/: main.cpp  utils.cpp  utils.h
src/sortvis/widgets/: BarPlotWidget.cpp  BarPlotWidget.h  BarplotWidget.cpp  ControlsWidget.cpp  ControlsWidget.h
src/sortvis/widgets/sorter/: BubblesortWidget.cpp  BubblesortWidget.h  QuicksortWidget.cpp  QuicksortWidget.h
